--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
   <body>
     <header class="page-header">
       <div class="container">
-      andrewmakarov97@gmail.com<br>
-      ozimandian@bk.ru<br>
-      +7 (961) 309 97 40
-
+        <a class="header-email" href="mailto:andrewmakarov97@gmail.com">andrewmakarov97@gmail.com</a>
+        <a class="header-email" href="ozimandian@bk.ru">ozimandian@bk.ru</a>
+        <a class="header-phone" href="tel:+79613099740">+79613099740</a>
     </div>
     </header>
 
@@ -38,9 +37,13 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">My works</h2>
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+      </figure>
 
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
+      <a class="button" href="source/index.html">Открыть страницу</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
@@ -49,9 +52,9 @@
 
     <footer class="page-footer">
       <div class="container">
-      andrewmakarov97@gmail.com<br>
-      ozimandian@bk.ru<br>
-      +7 (961) 309 97 40
+        <a class="footer-email" href="mailto:andrewmakarov97@gmail.com">andrewmakarov97@gmail.com</a>
+        <a class="footer-email" href="ozimandian@bk.ru">ozimandian@bk.ru</a>
+    <a class="footer-phone" href="tel:+79613099740">+79613099740</a>
     </div>
     </footer>
   </body>
